# wfrtc

./: .gitignore
YVRTCEngine/: YVRTCEngine.cpp  YVRTCEngine.h
YVRTCEngine/include/: yang_config.h
YVRTCEngine/include/yangandroid/: MetaPlayer.h  YangPlayerAndroid.h
YVRTCEngine/include/yangaudiodev/: YangAudioCaptureData.h  YangAudioRenderData.h
YVRTCEngine/include/yangcapture/: YangScreenCaptureHandleI.h
YVRTCEngine/include/yangdecoder/: YangAudioDecoderHandles.h  YangVideoDecoderHandles.h
YVRTCEngine/include/yangencoder/: YangAudioEncoder.h  YangAudioEncoderHandle.h  YangVideoEncoderHandle.h
YVRTCEngine/include/yangp2p/: YangP2pCommon.h  YangP2pServer.h  YangP2pServerH.h  recordmainwindow.h
YVRTCEngine/include/yangplayer/: YangPlayerHandle.h
YVRTCEngine/include/yangpush/: YangPushCommon.h  YangPushFactory.h  YangSendVideoI.h
YVRTCEngine/include/yangrecliving/: YangLivingHandle.h
YVRTCEngine/include/yangrecord/: YangFlvWrite.h  YangMp4File.h
YVRTCEngine/include/yangsrt/: YangTsPacket.h  crc.h
YVRTCEngine/include/yangtrace/: YangCameraControl.h  YangTraceHandle.h  YangTraceUdp.h
YVRTCEngine/include/yangutil/: yang_unistd.h  (+1 more)
include/: yvr_comm.h  yvrtc_interface.h  yvrtc_interface.rar
include/yangdecoder/: YangAudioDecoderHandle.h  YangVideoDecoderHandle.h
include/yangp2p/: YangP2pFactory.h
include/yangrecord/: YangRecordMp4.h
include/yangsrt/: YangTsBuffer.h
include/yangstream/: YangStreamCapture.h
include/yangtrace/: YangTraceServer.h
include/yangutil/: yangavtype_h265.h
lanrtc/: YVRTCdemo.pro  main.cpp  rtctest.cpp  rtctest.h  testdatachannel.cpp  testdatachannel.h
libmetartc5/: CMakeLists.txt  YVRTCEngine.pro  cmake_android.sh
libmetartc5/src/: yvr_comm.h
libmetartccore5/: CMakeLists.txt  cmake_android.sh
metap2p5/: main.cpp  recordmainwindow.cpp
metap2p5/video/: YangPlayWidget.cpp  YangPlayWidget.h
metap2p5_html/: p2pdemo_hd.html
metaplayer5/: YVRTCPlayer.pro  mainwindow.cpp  yangplayer_config.h
metaplayer5/yangplayer/: YangMouseListenWidget.cpp  YangMouseListenWidget.h  YangPlayWidget.cpp  YangPlayWidget.h
metaplayer5_android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
metapushstream5/screen/: YangScreenSocket.cpp  YangScreenSocket.h  rtcmessage.cpp  rtcmessage.h  yangscreenevent.cpp  yangscreenevent.h
metapushstream5/video/: YangPlayWidget.cpp  YangPlayWidget.h
yangwincodec5/: YangEncoderGpu.cpp  YangEncoderGpu.h  YangGpuEncoderFactory.cpp  YangGpuEncoderFactory.h  yangwincodec5.pro
yangwincodec5/codec/: YangH264EncoderGpu.cpp  YangH264EncoderGpu.h
yvplayer/: YVPlaydemo.pro  main.cpp  rtctest.cpp  rtctest.rar
(+132 files in other folders)
